[gd_scene load_steps=7 format=3 uid="uid://oiamf560qx6t"]

[ext_resource type="Texture2D" uid="uid://cs2scrnquxfvp" path="res://assets/pictures/bullet1.png" id="1_jdmof"]
[ext_resource type="Script" uid="uid://benm38ebghp3u" path="res://scenes/bullet/tracked_bullet.gd" id="2_eg6f6"]
[ext_resource type="Script" uid="uid://cfsmsiujxat5m" path="res://scripts/hitbox.gd" id="3_1gwvv"]
[ext_resource type="Script" uid="uid://dklgr7yc0h5b6" path="res://scenes/bullet/environment_hit_box.gd" id="4_p3d0t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rawoo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v44q1"]

[node name="Tracked_Bullet" type="Sprite2D"]
position = Vector2(3, -14)
texture = ExtResource("1_jdmof")
script = ExtResource("2_eg6f6")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource("3_1gwvv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-3, 14)
shape = SubResource("CircleShape2D_rawoo")

[node name="EnvironmentHitBox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 44
script = ExtResource("4_p3d0t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnvironmentHitBox"]
shape = SubResource("CircleShape2D_v44q1")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="hit" from="HitBox" to="." method="hit"]
